[gd_scene load_steps=16 format=2]

[ext_resource path="res://scripts/Game Board.gd" type="Script" id=1]
[ext_resource path="res://images/board_grid_3x3.png" type="Texture" id=2]
[ext_resource path="res://images/pause_button_normal.png" type="Texture" id=3]
[ext_resource path="res://images/pause_button_pressed.png" type="Texture" id=4]
[ext_resource path="res://scenes/game/Pause menu.tscn" type="PackedScene" id=5]
[ext_resource path="res://images/cpu.png" type="Texture" id=6]
[ext_resource path="res://images/human.png" type="Texture" id=7]
[ext_resource path="res://fonts/Open 24 Display St.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://images/newgame_normal.png" type="Texture" id=9]
[ext_resource path="res://images/retry_pressed.png" type="Texture" id=10]
[ext_resource path="res://images/newgame_pressed.png" type="Texture" id=12]
[ext_resource path="res://images/retry_normal.png" type="Texture" id=13]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 8 )

[node name="Game Board" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game Board Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Game Board Margin"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0

[node name="HBoxContainer" type="HBoxContainer" parent="Game Board Margin/VBoxContainer"]
margin_right = 984.0
margin_bottom = 64.0

[node name="Pause button" type="TextureButton" parent="Game Board Margin/VBoxContainer/HBoxContainer"]
margin_right = 64.0
margin_bottom = 64.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score board" type="CenterContainer" parent="Game Board Margin/VBoxContainer"]
margin_top = 68.0
margin_right = 984.0
margin_bottom = 132.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Game Board Margin/VBoxContainer/Score board"]
margin_left = 306.0
margin_right = 678.0
margin_bottom = 64.0
custom_constants/separation = 200

[node name="Player1" type="HBoxContainer" parent="Game Board Margin/VBoxContainer/Score board/HBoxContainer"]
margin_right = 86.0
margin_bottom = 64.0

[node name="Player1 avatar" type="TextureRect" parent="Game Board Margin/VBoxContainer/Score board/HBoxContainer/Player1"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 7 )

[node name="Player1 score" type="Label" parent="Game Board Margin/VBoxContainer/Score board/HBoxContainer/Player1"]
margin_left = 68.0
margin_top = 8.0
margin_right = 86.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.215686, 0.215686, 0.215686, 1 )
text = "0"

[node name="Player2" type="HBoxContainer" parent="Game Board Margin/VBoxContainer/Score board/HBoxContainer"]
margin_left = 286.0
margin_right = 372.0
margin_bottom = 64.0

[node name="Player2 score" type="Label" parent="Game Board Margin/VBoxContainer/Score board/HBoxContainer/Player2"]
margin_top = 8.0
margin_right = 18.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.215686, 0.215686, 0.215686, 1 )
text = "0"

[node name="Player2 avatar" type="TextureRect" parent="Game Board Margin/VBoxContainer/Score board/HBoxContainer/Player2"]
margin_left = 22.0
margin_right = 86.0
margin_bottom = 64.0
texture = ExtResource( 6 )

[node name="CenterContainer" type="CenterContainer" parent="Game Board Margin/VBoxContainer"]
margin_top = 136.0
margin_right = 984.0
margin_bottom = 560.0
size_flags_vertical = 3

[node name="Board grid" type="TextureRect" parent="Game Board Margin/VBoxContainer/CenterContainer"]
margin_left = 356.0
margin_top = 76.0
margin_right = 628.0
margin_bottom = 348.0
texture = ExtResource( 2 )

[node name="Cell grid" type="GridContainer" parent="Game Board Margin/VBoxContainer/CenterContainer"]
margin_left = 492.0
margin_top = 212.0
margin_right = 492.0
margin_bottom = 212.0
custom_constants/vseparation = 15
custom_constants/hseparation = 15
columns = 3

[node name="Game popup" type="MarginContainer" parent="Game Board Margin"]
visible = false
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0
custom_constants/margin_right = 150
custom_constants/margin_top = 100
custom_constants/margin_left = 150
custom_constants/margin_bottom = 100

[node name="Background color" type="ColorRect" parent="Game Board Margin/Game popup"]
margin_left = 150.0
margin_top = 100.0
margin_right = 834.0
margin_bottom = 460.0
color = Color( 1, 0.37, 0.37, 1 )

[node name="MarginContainer" type="MarginContainer" parent="Game Board Margin/Game popup/Background color"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 100
custom_constants/margin_top = 40
custom_constants/margin_left = 100
custom_constants/margin_bottom = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Game Board Margin/Game popup/Background color/MarginContainer"]
margin_left = 100.0
margin_top = 40.0
margin_right = 584.0
margin_bottom = 320.0
custom_constants/separation = 20

[node name="Winner center" type="CenterContainer" parent="Game Board Margin/Game popup/Background color/MarginContainer/VBoxContainer"]
margin_right = 484.0
margin_bottom = 70.0

[node name="Winner" type="Label" parent="Game Board Margin/Game popup/Background color/MarginContainer/VBoxContainer/Winner center"]
margin_left = 138.0
margin_right = 345.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.290196, 0.290196, 0.290196, 1 )
text = "N/A WON"

[node name="Retry center" type="CenterContainer" parent="Game Board Margin/Game popup/Background color/MarginContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 484.0
margin_bottom = 154.0

[node name="Retry" type="TextureButton" parent="Game Board Margin/Game popup/Background color/MarginContainer/VBoxContainer/Retry center"]
margin_left = 142.0
margin_right = 342.0
margin_bottom = 64.0
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 10 )

[node name="New game center" type="CenterContainer" parent="Game Board Margin/Game popup/Background color/MarginContainer/VBoxContainer"]
margin_top = 174.0
margin_right = 484.0
margin_bottom = 238.0

[node name="New game" type="TextureButton" parent="Game Board Margin/Game popup/Background color/MarginContainer/VBoxContainer/New game center"]
margin_left = 122.0
margin_right = 362.0
margin_bottom = 64.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 12 )

[node name="Player_input disabler" type="ColorRect" parent="Game Board Margin"]
visible = false
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 1, 1, 1, 0 )

[node name="Pause menu" parent="." instance=ExtResource( 5 )]
visible = false
[connection signal="pressed" from="Game Board Margin/VBoxContainer/HBoxContainer/Pause button" to="Game Board Margin" method="_on_Pause_button_pressed"]
[connection signal="pressed" from="Game Board Margin/Game popup/Background color/MarginContainer/VBoxContainer/Retry center/Retry" to="Game Board Margin" method="_on_Retry_pressed"]
[connection signal="pressed" from="Game Board Margin/Game popup/Background color/MarginContainer/VBoxContainer/New game center/New game" to="Game Board Margin" method="_on_New_game_pressed"]
